Fixed header text from sidebar

--- a/src/app/widget/sidebar/sidebar.component.html
+++ b/src/app/widget/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
   <div
     class="logo"
     (click)="onClickLogo()"
-    (click)="onClickListItemForOutput('')"
+    (click)="onClickListItemForOutput('Dashboard')"
   >
     <a routerLink="/" class="simple-text logo-normal">Filmes webshop</a>
   </div>
