--- a/src/app/page/listing/listing-order/listing-order.component.scss
+++ b/src/app/page/listing/listing-order/listing-order.component.scss
@@ -7,12 +7,9 @@
 .bg-dark:hover {
   cursor: pointer,
 }
+
 .material-icons {
   font-size: 24px,
-}
-#arrow {
-  display: flex;
-  justify-content: flex-end,
 }
 
 th {
@@ -20,7 +17,6 @@ th {
 }
 
 tbody > tr > td {
-
   height:20px;
   padding-left:10px;
   border-top: 0px;
@@ -34,9 +30,9 @@ tbody > tr > td {
   font-size: 60px;
   position: fixed;
   bottom: 50px;
-  right: 0px;
+  right: 0;
   opacity: 0.7;
-
+  cursor: pointer;
 }
 
 
