--- a/src/app/page/listing/listing-bill/listing-bill.component.html
+++ b/src/app/page/listing/listing-bill/listing-bill.component.html
@@ -1,3 +1,11 @@
+<!-- LOADING BOX -->
+<div class="loading-box" [hidden]="loaded">
+    <ngx-spinner size="large" color="grey" type="ball-spin-clockwise" [fullScreen]="false">
+        <p>Kis türelmet...</p>
+    </ngx-spinner>
+</div>
+<!-- LOADING BOX -->
+
 <ng-template #content let-modal class="shadow-lg">
     <div class="modal-header">
         <h3 class="modal-title ml-3 my-1" id="modal-title">{{ modalTitle }}</h3>
@@ -19,12 +27,11 @@
 </ng-template>
 
 
-<div class="container" id="top">
+<div class="container" id="top" [hidden]="!loaded">
     <a class="jump-top" (click)="navigateToHeader(500)"><i class="fa fa-arrow-circle-up"></i></a>
     <div class="row d-flex justify-content-center">
         <h2>PÉNZTÁR</h2>
         <div class="create col-12 my-3 mb-3">
-            <!-- <div class="col-5"> -->
             <button class=" create btn btn-success btn-block mt-3 mb-3" style="font-size:14px" [routerLink]="[0]">
                 <i class="material-icons">add</i>
                 ÚJ SZÁMLA LÉTREHOZÁSA
@@ -50,7 +57,6 @@
         </div>
         <div class="col-5 mt-0 mb-5 d-flex justify-content-end">
             <button class="btn btn-success my-2 my-sm-0" (click)="scroll('tfoot')">STATISZTIKA</button>
-            <!-- </div> -->
         </div>
 
     </div>
@@ -132,90 +138,3 @@
         </div>
     </div>
 </div>
-
-
-
-
-<!-- </table>
-    <div class="table-responsive">
-        <table class="table" id="summaries">
-            <thead class="bg-dark text-light">
-                <div class="ml-3" *ngIf="numberOfAllBills$ | async">
-                    ͏͏͏͏͏͏͏<p> <b style="font-size: 18px">Összes számla: {{ numberOfAllBills$ | async }}</b></p>
-                </div>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <div class="ml-3" *ngIf="sumOfUnpaidBills$ | async | hunFormat">
-                    ͏͏͏͏͏͏͏<p>
-                        <b style="font-size: 18px">Fizetetlen számlák összege: {{ sumOfUnpaidBills$ | async | hunFormat
-                            }} Ft
-                        </b>
-                    </p>
-                </div>
-            </thead>
-            <tbody></tbody>
-        </table>
-    </div>
-</div> -->
-
-
-<!-- <table class="table table-striped table-responsive" id="table">
-    <thead class="bg-dark text-light">
-        <tr>
-            <th (click)="onColumnSelect(col.key)" *ngFor="let col of cols">
-                <span *ngIf='col.key === sortedColumn && ! firstSorting'>
-                    <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
-                    <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
-                </span>
-
-                {{ col.text }}
-            </th>
-            <th class="d-flex justify-content-end mr-5">Műveletek</th>
-        </tr>
-    </thead>
-    <tbody>
-
-        <tr class="tablerow"
-            *ngFor="let bill of billList$ | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder">
-            <td>{{bill.id}}</td>
-            <td>{{bill.orderID}} </td>
-            <td>{{bill.amount | hunFormat }}</td>
-            <td>{{bill.status}}</td>
-            <td>
-                <div class="btn-group d-flex justify-content-end">
-                    <button [routerLink]="[bill.id]" class="btn btn-info">
-                        <i class="material-icons">edit</i>
-                    </button>
-                    <button (click)="onRemove(bill)" class="btn btn-danger">
-                        <i class="material-icons">delete_outline</i>
-                    </button>
-                </div>
-            </td>
-        </tr>
-    </tbody>
-</table>
-<div class="table-responsive">
-    <table class="table" id="summaries">
-        <thead class="bg-dark text-light">
-            <div class="ml-3" *ngIf="numberOfAllBills$ | async">
-                ͏͏͏͏͏͏͏<p> <b style="font-size: 18px">Összes számla: {{ numberOfAllBills$ | async }}</b></p>
-            </div>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <div class="ml-3" *ngIf="sumOfUnpaidBills$ | async | hunFormat">
-                ͏͏͏͏͏͏͏<p>
-                    <b style="font-size: 18px">Fizetetlen számlák összege: {{ sumOfUnpaidBills$ | async | hunFormat
-                        }} Ft
-                    </b>
-                </p>
-            </div>
-        </thead>
-        <tbody></tbody>
-    </table>
-</div> -->
