--- a/src/app/page/listing/listing-bill/listing-bill.component.scss
+++ b/src/app/page/listing/listing-bill/listing-bill.component.scss
@@ -17,12 +17,12 @@ tbody > tr > td {
   height:20px;
   padding:0px;
   border-top: 0px;
-  padding-left: 20px;
+  // padding-left: 20px;
 }
 
-.material-icons {
-  font-size: 24px;
-}
+// .material-icons {
+//   font-size: 24px;
+// }
 
 #arrow {
   display: flex;
@@ -40,6 +40,10 @@ tbody > tr > td {
   cursor: pointer;
 }
 
+.jump-top i:hover {
+  opacity: 1;
+}
+
 .create{
   margin-top: 0;
   margin-bottom: 0;
@@ -53,4 +57,17 @@ tbody > tr > td {
   height:20px;
   padding:10px;
   border-top: 0px;
+}
+
+.loading-box {
+  position: relative;
+  top: 10rem;
+
+}
+
+.loading-box p {
+  position: relative;
+  top: 8rem;
+  font-size: 2rem;
+  color: black;
 }
