--- a/src/app/page/listing/listing-order/listing-order.component.scss
+++ b/src/app/page/listing/listing-order/listing-order.component.scss
@@ -14,6 +14,11 @@
 
 th {
   user-select: none;
+  text-align: center;
+}
+
+tr {
+  text-align: center;
 }
 
 tbody > tr > td {
@@ -30,16 +35,32 @@ tbody > tr > td {
   font-size: 60px;
   position: fixed;
   bottom: 50px;
-  right: 0;
+  right: 3%;
   opacity: 0.7;
+  z-index: 1;
   cursor: pointer;
 }
-
 
 .jump-top i:hover {
   opacity: 1;
 }
 
 b {
-text-align: center;
+  text-align: center;
+}
+
+tfoot * {
+  user-select: none;
+  cursor: default;
+}
+
+.loading-box {
+  position: relative;
+  top: 10rem;
+}
+.loading-box p {
+  position: relative;
+  top: 8rem;
+  font-size: 2rem;
+  color: black;
 }
