--- a/src/app/page/listing/listing-bill/listing-bill.component.scss
+++ b/src/app/page/listing/listing-bill/listing-bill.component.scss
@@ -15,7 +15,7 @@ th{
 
 tbody > tr > td {
   height:20px;
-  padding:0px;
+  padding:10px;
   border-top: 0px;
   // padding-left: 20px;
 }
@@ -24,17 +24,17 @@ tbody > tr > td {
 //   font-size: 24px;
 // }
 
-#arrow {
-  display: flex;
-  justify-content: flex-end,
-}
+// #arrow {
+//   display: flex;
+//   justify-content: flex-end,
+// }
 
 .jump-top i {
   color: #4098D4;
   font-size: 60px;
   position: fixed;
   bottom: 50px;
-  right: 1%;
+  right: 3%;
   opacity: 0.7;
   z-index: 1;
   cursor: pointer;
@@ -44,10 +44,10 @@ tbody > tr > td {
   opacity: 1;
 }
 
-.create{
-  margin-top: 0;
-  margin-bottom: 0;
- }
+// .create{
+//   margin-top: 0;
+//   margin-bottom: 0;
+//  }
  tfoot * {
   user-select: none;
   cursor: default;
