Updated table id

--- a/src/app/page/listing/listing-bill/listing-bill.component.html
+++ b/src/app/page/listing/listing-bill/listing-bill.component.html
@@ -62,7 +62,7 @@
     </div>
     <div class="row">
         <div class="col-12">
-            <table class="table table-striped" id="table">
+            <table class="table table-striped" id="table4">
                 <thead class="bg-dark text-light">
                     <tr>
                         <th (click)="onColumnSelect('id')" style="width: 5%">
