--- a/src/app/page/listing/listing-customer/listing-customer.component.scss
+++ b/src/app/page/listing/listing-customer/listing-customer.component.scss
@@ -1,31 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 .table {
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
+
 .bg-dark:hover {
   cursor: pointer,
 }
-.material-icons {
-  font-size: 24px,
-}
-#arrow {
-  display: flex;
-  justify-content: flex-end,
-}
+
 th {
   user-select: none;
   text-align: center;
 }
+
 tbody > tr > td {
   height:20px;
-  padding:0px;
+  padding:10px;
   border-top: 0px;
   text-align: center;
 }
+
+tfoot * {
+  user-select: none;
+  cursor: default;
+}
+
 .jump-top i {
   color: #4098D4;
   font-size: 60px;
   position: fixed;
   bottom: 50px;
-  right: 0px;
+  right: 3%;
+  opacity: 0.7;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.jump-top i:hover {
+  opacity: 1;
+}
+
+.loading-box {
+  position: relative;
+  top: 10rem;
+}
+
+.loading-box p {
+  position: relative;
+  top: 8rem;
+  font-size: 2rem;
+  color: black;
 }
