--- a/src/app/page/listing/listing-customer/listing-customer.component.html
+++ b/src/app/page/listing/listing-customer/listing-customer.component.html
@@ -25,125 +25,128 @@
   </div>
 </ng-template>
 
+<header id="header"></header>
 <div class="container" id="top" [hidden]="!loaded">
-  <a class="jump-top" (click)="navigateToHeader(500)"><i class="fa fa-arrow-circle-up"></i></a>
-  <div class="row d-flex justify-content-center">
-    <h2>VÁSÁRLÓK</h2>
-  </div>
-  <div class="col-12 my-3 mb-3">
-    <button class="btn btn-success btn-block mt-3 mb-3" style="font-size:14px" [routerLink]="[0]">
-      <i class="material-icons">add</i> ÚJ VÁSÁRLÓ LÉTREHOZÁSA
-    </button>
-  </div>
-  <div class="col-3 mt-0 mb-3">
-    <select [(ngModel)]="filterKey" class="custom-select bg-light" style="font-size: 20px">
-      <option *ngFor="let col of cols" [value]="col.key">
-        {{ col.text }}
-      </option>
-    </select>
-  </div>
-  <div class="col-4 search-bar mt-0 mb-3">
-    <form class="form-inline my-2 my-lg-0">
-      <input (keyup)="onChangePhrase($event)" class="form-control mr-sm-2" type="text" placeholder="Keresés" />
-      <button class="btn btn-success my-2 my-sm-0" type="submit">
-        <i class="material-icons">manage_search</i> Keresés
+  <a (click)="navigateToHeader(500)" class="jump-top" href="customers#top"><i class="fa fa-arrow-circle-up"></i></a>
+  <div class="row">
+    <div class="col-4 offset-5 mb-3 mt-0">
+      <h2>VÁSÁRLÓK</h2>
+    </div>
+    <div class="col-12 my-3 mb-3">
+      <button class="btn btn-success btn-block mt-3 mb-3" style="font-size:14px" [routerLink]="[0]">
+        <i class="material-icons">add</i> ÚJ VÁSÁRLÓ LÉTREHOZÁSA
       </button>
-    </form>
+    </div>
+    <div class="col-3 mt-0 mb-3">
+      <select [(ngModel)]="filterKey" class="custom-select bg-light" style="font-size: 20px">
+        <option *ngFor="let col of cols" [value]="col.key">
+          {{ col.text }}
+        </option>
+      </select>
+    </div>
+    <div class="col-4 search-bar mt-0 mb-3">
+      <form class="form-inline my-2 my-lg-0">
+        <input (keyup)="onChangePhrase($event)" class="form-control mr-sm-2" type="text" placeholder="Keresés" />
+        <button class="btn btn-success my-2 my-sm-0" type="submit">
+          <i class="material-icons">manage_search</i> Keresés
+        </button>
+      </form>
+    </div>
+    <div class="col-5 mt-0 mb-5 d-flex justify-content-end">
+      <button class="btn btn-success my-2 my-sm-0" (click)="scroll('tfoot')">STATISZTIKA</button>
+    </div>
   </div>
-  <div class="col-5 mt-0 mb-5 d-flex justify-content-end">
-    <button class="btn btn-success my-2 my-sm-0" (click)="scroll('tfoot')">STATISZTIKA</button>
+  <div class="row">
+    <div class="col-12">
+      <table class="table table-striped table-responsive" id="table2">
+        <thead class="bg-dark text-light">
+          <tr>
+            <th (click)="onColumnSelect('id')" style="width:5%">
+              <span *ngIf='"id" === sortedColumn && !firstSorting'>
+                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+              </span>
+              #
+            </th>
+            <th (click)="onColumnSelect('name')">
+              <span *ngIf='"name" === sortedColumn && !firstSorting'>
+                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+              </span>
+              Keresztnév
+            </th>
+            <th (click)="onColumnSelect('type')" style="width:8%">
+              <span *ngIf='"type" === sortedColumn && !firstSorting'>
+                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+              </span>
+              Vezetéknév
+            </th>
+            <th (click)="onColumnSelect('catId')" style="width:8%">
+              <span *ngIf='"catId" === sortedColumn && !firstSorting'>
+                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+              </span>
+              Email
+            </th>
+            <th (click)="onColumnSelect('description')" style="width:30%">
+              <span *ngIf='"description" === sortedColumn && !firstSorting'>
+                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+              </span>
+              Cím
+            </th>
+            <th (click)="onColumnSelect('active')" style="width:10%">
+              <span *ngIf='"active" === sortedColumn && !firstSorting'>
+                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+              </span>
+              Aktív
+            </th>
+            <th>Műveletek</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr
+            *ngFor="let customer of customerList$ | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder">
+            <td>{{ customer.id }}</td>
+            <td>{{ customer.firstName }}</td>
+            <td>{{ customer.lastName }}</td>
+            <td>{{ customer.email }}</td>
+            <td>{{ customer.address.zip }} {{ customer.address.country }} {{ customer.address.city }}
+              {{customer.address.street }}</td>
+            <td>
+              <div *ngIf="customer.active" style="text-align: center;"><i class="fa fa-check"></i></div>
+              <div *ngIf="!customer.active" style="text-align: center;"><i class="fa fa-times"></i></div>
+            </td>
+            <td class="td-actions text-right">
+              <button type="button" rel="tooltip" class="btn btn-success btn-round mr-2" [routerLink]="[customer.id]">
+                <i class="material-icons">edit</i>
+              </button>
+              <button type="button" rel="tooltip" class="btn btn-danger btn-round" (click)="log(customer)"
+                (click)="open(content)">
+                <i class="material-icons">close</i>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+        <tfoot class="bg-dark text-light" id="tfoot">
+          <tr>
+            <td colspan="9">
+              <div class="d-flex justify-content-around">
+                <span *ngIf="numberOfAllCustomers$| async">
+                  Összes vásárló: {{ numberOfAllCustomers$ | async }}
+                </span>
+                <span *ngIf="numberOfActiveCustomers$| async">
+                  Aktív vásárló: {{ numberOfActiveCustomers$ | async }}
+                </span>
+                <span *ngIf="numberOfPassiveCustomers$| async">
+                  Passzív vásárló: {{ numberOfPassiveCustomers$ | async }}
+                </span>
+              </div>
+            </td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-12">
-    <table class="table table-striped table-responsive" id="table2">
-      <thead class="bg-dark text-light">
-        <tr>
-          <th (click)="onColumnSelect('id')" style="width:5%">
-            <span *ngIf='"id" === sortedColumn && !firstSorting'>
-              <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
-              <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
-            </span>
-            #
-          </th>
-          <th (click)="onColumnSelect('name')">
-            <span *ngIf='"name" === sortedColumn && !firstSorting'>
-              <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
-              <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
-            </span>
-            Keresztnév
-          </th>
-          <th (click)="onColumnSelect('type')" style="width:8%">
-            <span *ngIf='"type" === sortedColumn && !firstSorting'>
-              <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
-              <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
-            </span>
-            Vezetéknév
-          </th>
-          <th (click)="onColumnSelect('catId')" style="width:8%">
-            <span *ngIf='"catId" === sortedColumn && !firstSorting'>
-              <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
-              <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
-            </span>
-            Email
-          </th>
-          <th (click)="onColumnSelect('description')" style="width:30%">
-            <span *ngIf='"description" === sortedColumn && !firstSorting'>
-              <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
-              <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
-            </span>
-            Cím
-          </th>
-          <th (click)="onColumnSelect('active')" style="width:10%">
-            <span *ngIf='"active" === sortedColumn && !firstSorting'>
-              <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
-              <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
-            </span>
-            Aktív
-          </th>
-          <th>Műveletek</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let customer of customerList$ | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder">
-          <td>{{ customer.id }}</td>
-          <td>{{ customer.firstName }}</td>
-          <td>{{ customer.lastName }}</td>
-          <td>{{ customer.email }}</td>
-          <td>{{ customer.address.zip }} {{ customer.address.country }} {{ customer.address.city }}
-            {{customer.address.street }}</td>
-          <td>
-            <div *ngIf="customer.active" style="text-align: center;"><i class="fa fa-check"></i></div>
-            <div *ngIf="!customer.active" style="text-align: center;"><i class="fa fa-times"></i></div>
-          </td>
-          <td class="td-actions text-right">
-            <button type="button" rel="tooltip" class="btn btn-success btn-round mr-2" [routerLink]="[customer.id]">
-              <i class="material-icons">edit</i>
-            </button>
-            <button type="button" rel="tooltip" class="btn btn-danger btn-round" (click)="log(customer)"
-              (click)="open(content)">
-              <i class="material-icons">close</i>
-            </button>
-          </td>
-        </tr>
-      </tbody>
-      <tfoot class="bg-dark text-light" id="tfoot">
-        <tr>
-          <td colspan="9">
-            <div class="d-flex justify-content-around">
-              <span *ngIf="numberOfAllCustomers$| async">
-                Összes vásárló: {{ numberOfAllCustomers$ | async }}
-              </span>
-              <span *ngIf="numberOfActiveCustomers$| async">
-                Aktív vásárló: {{ numberOfActiveCustomers$ | async }}
-              </span>
-              <span *ngIf="numberOfPassiveCustomers$| async">
-                Passzív vásárló: {{ numberOfPassiveCustomers$ | async }}
-              </span>
-            </div>
-          </td>
-        </tr>
-      </tfoot>
-    </table>
-  </div>
-</div>
