--- a/src/app/page/listing/listing-customer/listing-customer.component.html
+++ b/src/app/page/listing/listing-customer/listing-customer.component.html
@@ -80,7 +80,8 @@
                 <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
                 <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
               </span>
-              <<<<<<< HEAD Vezetéknév </th>
+              Vezetéknév
+            </th>
             <th (click)="onColumnSelect('catId')" style="width:8%">
               <span *ngIf='"catId" === sortedColumn && !firstSorting'>
                 <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
