--- a/src/app/page/listing/listing-order/listing-order.component.scss
+++ b/src/app/page/listing/listing-order/listing-order.component.scss
@@ -8,9 +8,9 @@
   cursor: pointer,
 }
 
-.material-icons {
-  font-size: 24px,
-}
+// .material-icons {
+//   font-size: 24px,
+// }
 
 th {
   user-select: none;
