Fixed material icon size

--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -140,7 +140,7 @@
             <td>{{ order.productID }}</td>
             <td>{{ order.amount }}</td>
             <td>{{ order.status }}</td>
-            <td class="td-actions text-right mr-5">
+            <td class="td-actions text-right">
               <button type="button" rel="tooltip" class="btn btn-success btn-round mr-1" [routerLink]="[order.id]">
                 <i class="material-icons">edit</i>
               </button>
